# Shrink

./: Cargo.toml  README.md
Shrink/: LICENSE  README.md
Shrink/.github/workflows/: release.yml
Shrink/Formula/: mcp-token-gateway.rb
Shrink/npm/: bin.js  install.js  package.json
Shrink/src/: compactor.rs  config.rs  ledger.rs  main.rs  metrics.rs  protocol.rs  proxy.rs  router.rs  session.rs  sse.rs  validator.rs
Shrink/tests/: drive_agent.py  drive_multi.py  mock_upstream.py  two_servers.toml
