[package]
name        = "mcp-token-gateway"
version     = "0.1.0"
edition     = "2021"
rust-version = "1.75"
description = "Transparent MCP proxy — compacts verbose tool schemas and routes across multiple upstream servers."
license     = "MIT"

[[bin]]
name = "mcp-token-gateway"
path = "src/main.rs"

[features]
default = []
# Compile the SSE/HTTP network transport.
# Build with: cargo build --release --features sse
sse = ["dep:axum", "dep:tokio-stream", "dep:tower-http"]

[dependencies]
tokio       = { version = "1.38", features = ["rt-multi-thread","macros","io-std","io-util","process","time","sync"] }
tokio-util  = { version = "0.7",  features = ["codec"] }
futures     = "0.3"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
dashmap     = "5.5"
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = "0.3"
toml        = "0.5"

# ── SSE/HTTP transport (opt-in) ─────────────────────────────────────────────
axum         = { version = "0.7", optional = true }
tokio-stream = { version = "0.1", optional = true }
tower-http   = { version = "0.5", features = ["cors","trace"], optional = true }

[profile.release]
lto           = true
codegen-units = 1
strip         = true